# mathlib4-reviewer-memory

./: .gitignore  README.md  pyproject.toml
config/: scraper.yaml
data/eval/: heldout_inspection_report.md  llm_judge_report.md  llm_judge_summary.json  llm_judgments.jsonl  openpr_v3_1_all20.jsonl  openpr_v3_all20.jsonl  openpr_v3_gemini_all20.jsonl  prompt_ablation_report.md
data/eval/transcripts/: case1_v1.txt  case1_v2.txt  case2_v1.txt  case2_v2.txt  case3_v1.txt  case3_v2.txt  case4_v1.txt  case4_v2.txt  case5_v1.txt  case5_v2.txt  case6_v1.txt  case6_v2.txt  openpr_A_v2.txt  openpr_B_v2.txt  openpr_C_v2.txt  openpr_D_v2.txt  openpr_D_v2_windowed.txt  openpr_D_v3.txt  openpr_D_v3_1.txt  openpr_D_v3_gemini.txt  openpr_E_v2.txt  openpr_E_v2_windowed.txt  (+78 more)
gallery/: README.md
scripts/: aggregate_llm_judgments.py  analyze_heldout_retrieval.py  build_gallery.py  build_rag_index_data.py  dump_chat_transcripts.py  embed_rag_corpus.py  inspect_open_pr_retrieval.py  llm_judge_retrieval.py  make_heldout_report.py  oracle_coverage.py  oracle_coverage_v2.py  review_pr.py  run_heldout_retrieval.py  run_open_pr_v2.py  run_open_pr_v2_sweep.py  run_open_pr_v2_sweep2.py  run_open_pr_v2_sweep_windowed.py  run_prompt_ablation.py  run_v3_1_sweep_all20.py  run_v3_gemini_all20.py  run_v3_sweep_all20.py  scrape_mathlib4.py  test_open_prs.py  validate_dataset.py
src/pipeline/: __init__.py  build_review_events.py  config.py  export_ml_views.py  extract_mathlib4.py  github_client.py  http.py  normalize_mathlib4.py  retrieval.py  state.py  storage.py
src/product/: review_assistant.py
